manifests/ingress/routes_traefik.yaml
# Traefik Ingress Route Manifest

# Traefik Dashboard (protected with basic auth)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.<YOUR_DOMAIN>.sslip.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: dashboard-auth # Requires login
      services:
        - name: api@internal # Internal Traefik API service
          kind: TraefikService
    - match: Host(`traefik.<YOUR_PUBLIC_IP>.sslip.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: dashboard-auth # Requires login
      services:
        - name: api@internal # Internal Traefik API service
          kind: TraefikService
  tls:
    certResolver: letsencrypt
